auth swagger docs
